1.0.2 tried to fix scrollbar

--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ body {
     background: var(--background);
     text-decoration: none;
     font-family: "Kumbh Sans", sans-serif;
-    overflow-x: hidden;
     overscroll-behavior-x: none;
     scroll-behavior: smooth;
     transition: 1s;
@@ -50,12 +49,13 @@ body {
     margin: 0;
 }
 
-html, body {
+html {
     overflow-x: hidden;
     overflow-y: visible;
 }
 body {
     position: relative;
+    overflow-x: hidden;
     width: 100%;
     height: 100vh;
 }
@@ -69,7 +69,7 @@ body {
 
 
 .navbar {
-    top: 50px;
+    top: 0;
     width: auto;
     height: 5vh;
     display: flex;
@@ -78,12 +78,11 @@ body {
     text-align: center;
     justify-content: space-between;
     position: sticky;
-    top: 0;
     background: var(--background);
     overflow: hidden;
     padding: 25px;
     padding-top: 20px;
-    z-index: 5;
+    z-index: 2;
     margin-bottom: 0px;
     background: var(--background);
     -webkit-box-shadow: 0px 25px 32px -7px var(--background);
@@ -170,7 +169,7 @@ body {
     }
 
     .navbar {
-        padding: 5vh;
+        padding: 3vh;
     }
 
 
@@ -502,6 +501,7 @@ body {
     left: 0;
     width: 80vw;
     height: auto;
+
 
 
 }
